random card 14 julio

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,14 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+  <body style="background-color:rgb(18, 150, 24);"></body>
+  <div class="carta" style="background-color:white  ">
+    <div class="pinta" style="font-size: 90px;">
+      &#9824;
     </div>
-  </body>
+    <div class="numero" style="font-size: 150px;">2</div>
+    <div class="pinta2" style="font-size: 90px;margin-top: -100px;">
+      &#9824;
+    </div>
+  </div>
 </html>
