--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
   </head>
   <body style="background-color:rgb(18, 150, 24);"></body>
   <div class="carta" style="background-color:white  ">
-    <div class="pinta" style="font-size: 90px;">
+    <div class="pinta pintas" style="font-size: 90px;">
       &#9824;
     </div>
     <div class="numero" style="font-size: 150px;">2</div>
-    <div class="pinta2" style="font-size: 90px;margin-top: -100px;">
+    <div class="pinta2 pintas" style="font-size: 90px;margin-top: -100px;">
       &#9824;
     </div>
   </div>
